adding img folder and card images

--- a/templates/red_even.html
+++ b/templates/red_even.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Result: <span class="w3-tag w3-red w3-round">{{ number }}</span></h1>
-	<h3>Even: <img src="/static/right.png"></h3>
-	<h3>Odd: <img src="/static/wrong.png"></h3>
+	<h3>Even: <img src="/static/img/right.png"></h3>
+	<h3>Odd: <img src="/static/img/wrong.png"></h3>
 </body>
 </html>
