roll again option
roll again/ spin again option

--- a/templates/black_odd.html
+++ b/templates/black_odd.html
@@ -7,5 +7,6 @@
 	<h1>Result: <span class="w3-tag w3-black w3-round">{{ number }}</span></h1>
 	<h3>Even: <img src="/static/img/wrong.png"></h3>
 	<h3>Odd: <img src="/static/img/right.png"></h3>
+	<button value="Refresh Page" onClick="window.location.reload();">Spin Again</button>
 </body>
 </html>
