--- a/templates/dice.html
+++ b/templates/dice.html
@@ -6,5 +6,6 @@
 <body>
 	<h1>Result Total: {{ sum }}</h1>
 	<img style="padding-left: 50px; padding-top: 10px" src="{{ d1 }}" alt="User Image"><img src="{{ d2 }}" alt="User Image">
+	<button value="Refresh Page" onClick="window.location.reload();">Roll Again</button>
 </body>
 </html>
