--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,11 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
+	<h1>Play Your Favorite Game</h1>
 	<button onClick="window.location.href='/backjack';">Blackjack</button>
+	<br />
 	<button onClick="window.location.href='/roulette';">Roulette</button>
+	<br />
 	<button onClick="window.location.href='/dice';">Dice</button>
 </body>
 </html>
