moving blackjack html to blackjack.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Play Your Favorite Game</h1>
-	<button onClick="window.location.href='/backjack';">Blackjack</button>
+	<button onClick="window.location.href='/blackjack';">Blackjack</button>
 	<br />
 	<button onClick="window.location.href='/roulette';">Roulette</button>
 	<br />
